immodule: Fix context ID lookup on module with multiple contexts

https://bugzilla.gnome.org/show_bug.cgi?id=690247